Add todo completion

--- a/todo-app/src/app/todo-list/todo-list.component.html
+++ b/todo-app/src/app/todo-list/todo-list.component.html
@@ -3,6 +3,7 @@
     <ul>
         <li *ngFor="let todo of todos">
             <p>{{todo.name}}</p>
+            <button type="button" (click)="complete(todo)">Complete todo</button>
         </li>
     </ul>
 </div>
